--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
+@import "base/animated";
 @import "base/base";
 @import "base/typography";
 
