--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -93,6 +93,23 @@ input, select {
   vertical-align: middle;
 }
 
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+  opacity: 0;
+  animation-duration: 1s;
+}
+
+.js--wp-4 {
+  animation-duration: 1s;
+}
+
+.jp--wp-1.animated,
+.jp--wp-2.animated,
+.jp--wp-3.animated {
+  opacity: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -248,13 +265,25 @@ h3 {
   margin-bottom: 1rem;
 }
 
+.navigation {
+  transition: all 0.2s;
+}
 .navigation__logo {
   height: 10rem;
   width: 10rem;
   float: left;
   margin-top: 2rem;
+  margin-right: 3.5rem;
+}
+.navigation__logo--black {
+  display: none;
+  height: 5rem;
+  width: auto;
+  float: left;
+  margin: 0.5rem 0;
 }
 .navigation__list {
+  font-size: 1.4rem;
   float: right;
   list-style: none;
   margin-top: 5.5rem;
@@ -270,12 +299,51 @@ h3 {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 1.8rem;
   border-bottom: 0.2rem solid transparent;
   transition: all 0.3s;
 }
 .navigation__link:hover, .navigation__link:active {
   border-bottom: 0.2rem solid #e67e22;
+}
+
+.stuck {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+}
+.stuck .navigation__link:link, .stuck .navigation__link:visited {
+  padding: 1.7rem 0;
+  color: #555;
+  border-bottom: 0.3rem solid transparent;
+  transition: all 0.3s;
+}
+.stuck .navigation__link:hover, .stuck .navigation__link:active {
+  border-bottom: 0.3rem solid #e67e22;
+}
+.stuck .navigation__logo {
+  display: none;
+}
+.stuck .navigation__logo--black {
+  display: block;
+}
+.stuck .navigation__list {
+  margin-top: 2rem;
+}
+
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.mobile-nav-icon i {
+  font-size: 3rem;
+  color: #fff;
 }
 
 .plan {
